kosmic-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kosmic-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kosmic-frontend
  template:
    metadata:
      labels:
        app: kosmic-frontend
    spec:
      containers:
      - name: kosmic-frontend
        image: 572751388225.dkr.ecr.us-east-1.amazonaws.com/kosmic-frontend:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kosmic-frontend
spec:
  selector:
    app: kosmic-frontend
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
